# ExcllentCaseExpert

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: config.template.yaml  icon.icns
core/: __init__.py  ai_model_provider.py  ai_test_point_analyzer.py  export_manager.py  ocr_engine.py  test_case_generator.py  workers.py  xmind_exporter.py
tests/: __init__.py  test_ai_analyzer.py  test_ai_model_provider.py  test_export_manager.py  test_ocr_engine.py
ui/: __init__.py  main_window.py  settings_dialog.py  styles.py  workers.py
ui/widgets/: ocr_result_widget.py  test_case_widget.py  test_point_widget.py
utils/: __init__.py  cache_manager.py  config_manager.py  exceptions.py  log_manager.py  memory_manager.py  models.py
